# php-flame

./: .gitignore  .gitmodules  CMakeLists.txt  LICENCE  LICENSE  Makefile  README.md  README_en.md  deps.h  run-tests.php  xmake.lua
core/: xmake.lua
core/src/: demo.cpp  demo.php
doc/: compress.php  core.php  encoding.php  flame.md  flame.php  flame_db.md  flame_db_redis.md  flame_net.md  flame_net_fastcgi.md  flame_net_http.md  flame_os.md  flame_time.md  hash.php  http.php  kafka.php  log.php  mongodb.php  mysql.php  net.md  os.php  rabbitmq.php  redis.php  smtp.php  tcp.php  time.php  toml.php  udp.php  util.php
docs/: core.md  flame_db.md  flame_db_kafka.md  flame_db_mongodb.md  flame_db_mysql.md  flame_db_rabbitmq.md  flame_log.md  flame_net.md  flame_net_fastcgi.md  flame_net_http.md  flame_os.md  flame_time.md  http.md  index.md  kafka.md  log.md  mongodb.md  mysql.md  os.md  rabbitmq.md  redis.md  tcp.md  time.md  udp.md
example/: usage.php
examples/: http_server.php
src/: command.h  controller.cpp  controller.h  controller_master.cpp  controller_master.h  controller_worker.cpp  controller_worker.h  core.cpp  core.h  coroutine.cpp  coroutine.h  coroutine_mutex.h  coroutine_queue.h  dynamic_buffer.h  extension.cpp  flame.cpp  ipc.cpp  ipc.h  keeper.cpp  keeper.h  logger.h  logger_master.cpp  logger_master.h  logger_worker.cpp  logger_worker.h  master_ipc.cpp  master_ipc.h  master_logger.cpp  master_logger.h  master_logger_buffer.cpp  master_logger_buffer.h  master_logger_manager.cpp  master_logger_manager.h  master_process.cpp  master_process.h  master_process_manager.cpp  master_process_manager.h  mutex.cpp  mutex.h  process_child.cpp  (+22 more)
src/compress/: compress.cpp  compress.h
src/core/: basic_snowflake.cpp  basic_snowflake.h  clock.cpp  clock.h  cluster.cpp  cluster.h  context.cpp  context.h  context.hpp  core.cpp  core.h  coroutine.h  coroutine.hpp  default_sink.cpp  default_sink.h  exception.h  function.cpp  function.h  function_init_cluster.cpp  function_init_cluster.h  function_init_options.cpp  function_init_options.h  function_run_worker.cpp  function_run_worker.h  logger.cpp  logger.h  logger.hpp  parse_url.cpp  parse_url.h  random_string.cpp  random_string.h  syslog_sink.cpp  syslog_sink.h  url.cpp  url.h  url.hpp  util.cpp  util.h  util.hpp  vendor.h  (+2 more)
src/db/: connection.cpp  connection.h  init.cpp  init.h  lmdb.cpp  lmdb.h
src/encoding/: encoding.cpp  encoding.h
src/flame/: asyncfn.cpp  asyncfn.h  controller.cpp  controller.h  coroutine.cpp  coroutine.h  coroutine_switch.h  environment.cpp  environment.h  fiber.cpp  fiber.h  flame.cpp  flame.h  future.h  master.cpp  master.h  mutex.cpp  mutex.h  pipe_worker.cpp  pipe_worker.h  process.cpp  process.h  process_manager.cpp  process_master.cpp  process_master.h  process_worker.cpp  process_worker.h  promise.cpp  promise.h  queue.cpp  queue.h  thread_worker.cpp  thread_worker.h  version.cpp  version.h  worker.cpp  worker.h
src/hash/: hash.cpp  hash.h
src/http/: _connection_pool.cpp  _connection_pool.h  _handler.cpp  _handler.h  acceptor.cpp  acceptor.h  chunked_writer.cpp  chunked_writer.h  client.cpp  client.h  client.ipp  client_body.cpp  client_body.h  client_poll.cpp  client_poll.h  client_request.cpp  client_request.h  client_response.cpp  client_response.h  content_writer.cpp  content_writer.h  executor.h  executor.ipp  file_writer.cpp  file_writer.h  handler.cpp  handler.h  header.cpp  header.h  http.cpp  http.h  init.cpp  init.h  server.cpp  server.h  server_request.cpp  server_request.h  server_response.cpp  server_response.h  value_body.cpp  (+3 more)
src/kafka/: _consumer.cpp  _consumer.h  _producer.cpp  _producer.h  consumer.cpp  consumer.h  kafka.cpp  kafka.h  message.cpp  message.h  producer.cpp  producer.h
src/log/: log.cpp  log.h  logger.cpp  logger.h
src/mongodb/: _connection_base.cpp  _connection_base.h  _connection_lock.cpp  _connection_lock.h  _connection_pool.cpp  _connection_pool.h  client.cpp  client.h  collection.cpp  collection.h  cursor.cpp  cursor.h  date_time.cpp  date_time.h  mongodb.cpp  mongodb.h  object_id.cpp  object_id.h
src/mysql/: _connection_base.cpp  _connection_base.h  _connection_lock.cpp  _connection_lock.h  _connection_pool.cpp  _connection_pool.h  client.cpp  client.h  mysql.cpp  mysql.h  result.cpp  result.h  transaction.cpp  transaction.h  tx.cpp  tx.h
src/net/: addr.cpp  addr.h  init.cpp  init.h  tcp_server.cpp  tcp_server.h  tcp_socket.cpp  tcp_socket.h  udp_socket.cpp  udp_socket.h
src/net_mill/: addr.cpp  addr.h  tcp_server.cpp  tcp_socket.cpp  tcp_socket.h
src/os/: os.cpp  os.h  process.cpp  process.h  signal_watcher.cpp  signal_watcher.h
src/rabbitmq/: _client.cpp  _client.h  client.cpp  client.h  consumer.cpp  consumer.h  message.cpp  message.h  producer.cpp  producer.h  rabbitmq.cpp  rabbitmq.h
src/redis/: _client.cpp  _client.h  _command.cpp  _command.h  _command_base.h  _connection_base.cpp  _connection_base.h  _connection_lock.cpp  _connection_lock.h  _connection_pool.cpp  _connection_pool.h  _transaction.cpp  _transaction.h  client.cpp  client.h  redis.cpp  redis.h  transaction.cpp  transaction.h  tx.cpp  tx.h
src/sentry/: config.txt  exception.txt
src/tcp/: acceptor.cpp  acceptor.h  server.cpp  server.h  socket.cpp  socket.h  tcp.cpp  tcp.h
src/time/: time.cpp  time.h  timer.cpp  timer.h
src/toml/: _decode.cpp  _decode.h  _executor.cpp  _executor.h  toml.cpp  toml.h
src/udp/: server.cpp  server.h  socket.cpp  socket.h  udp.cpp  udp.h
test/: compress_1.php  core.php  core_0.php  core_1.php  core_2.php  core_async.php  coroutine_1.php  coroutine_2.php  db.php  db_lmdb.php  encoding_1.php  error.php  error_1.php  exception_1.php  generator.php  hash_1.php  http_1.php  http_2.php  kafka_1.php  kafka_2.php  keeper.php  log_1.php  log_2.php  logger_1.php  logger_2.php  logger_3.php  mongodb_1.php  mongodb_2.php  mutex_1.php  mysql_1.php  mysql_2.php  mysql_3.php  mysql_4.php  mysql_5.php  net_http_client.php  net_http_server.php  net_http_server_gzip.php  net_http_server_swoole.php  net_https_client.php  net_tcp_client.php  (+28 more)
(+447 files in other folders)
